--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <script src="assets/js/login-signup.js"></script>
     <script src="assets/js/forgotPassword.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/mini_backend.js"></script>
+   
     
     <link rel="stylesheet" href="assets/css/login-signup.css">
     <link rel="stylesheet" href="assets/css/miniPopups.css">
@@ -21,7 +24,7 @@
 
 </head>
 
-<body onload="animatedLogo()">
+<body onload="animatedLogo(), init()">
     <!-- init logo-->
     <div class="logo_init" id="logo_init">
         <img id="logo_init2" src="assets/img/logo_init.svg">
