--- a/summary.html
+++ b/summary.html
@@ -17,10 +17,11 @@
 
     <script src="assets/js/summary.js"></script>
     <script src="assets/js/header.js"></script>
+    <script src="assets/js/script.js"></script>
     <div w3-include-html="assets/templates/header.html"></div>
 </head>
 
-<body onload="initSummary()">
+<body onload="init()">
     <div w3-include-html="assets/templates/menu.html"></div>
     <div class="summary_general_cont center-center">
         <div class="container_summary column-center">
