--- a/prueba.html
+++ b/prueba.html
@@ -19,6 +19,7 @@
     <script src="assets/js/login-signup.js"></script>
     <script src="assets/js/forgotPassword.js"></script>
     <script src="assets/js/summary.js"></script>
+    <script src="assets/js/script.js"></script>
 </head>
 
 <body onload="initSummary()">
