--- a/contacts.html
+++ b/contacts.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="assets/css/miniPopups.css">
     <link rel="stylesheet" href="assets/css/models.css">
+    <link rel="stylesheet" href="assets/css/contacts.css">
 
     <script src="assets/js/header.js"></script>
     <script src="assets/js/script.js"></script>
