--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <script src="assets/js/forgotPassword.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/mini_backend.js"></script>
-   
-    
+    <script>
+        setURL('https://juan-desantos.developerakademie.net/smallest_backend_ever');
+    </script>
+
     <link rel="stylesheet" href="assets/css/login-signup.css">
     <link rel="stylesheet" href="assets/css/miniPopups.css">
     <link rel="stylesheet" href="assets/css/models.css">
@@ -54,7 +56,8 @@
                 </div>
                 <div class="user_password column-flex-start">
                     <div class="inputs login_input_password row-center">
-                        <input required type="password" minlength="6" class="input_password font400" placeholder="Password">
+                        <input required type="password" minlength="6" class="input_password font400"
+                            placeholder="Password">
                         <img class="login_input_img" src="assets/img/locker.svg" alt="">
                     </div>
                 </div>
@@ -81,44 +84,7 @@
         <div class="login_logo_join_blue">
             <img src="assets/img/logo_join_white.svg">
         </div>
-        <!-- Sign up window-->
-        <div class="login_container column-center d-none" id="sign_up_container">
-            <div class="blue_arrow" onclick="showLoginSite()">
-                <img src="assets/img/blue_arrow.svg" class="blue_arrow_img">
-            </div>
-            <div class="signUp_container d-none column-center" id="container_sign_up">
-                <div class="login_title column-center">
-                    <a class="login_text">Sign up</a>
-                    <div class="login_blue_line"></div>
-                </div>
-                <div class="user_container column-flex-start">
-                    <div class="signup_user column-flex-start">
-                        <div class="inputs signup_input_user row-center">
-                            <input class="input_user font400" type="text" placeholder="Name">
-                            <img class="login_input_img" src="assets/img/user.png" alt="">
-                        </div>
-                    </div>
-                    <div class="user_mail column-flex-start">
-                        <div class="inputs login_input_mail row-center">
-                            <input class="input_mail" type="text" placeholder="Email">
-                            <img class="login_input_img" src="assets/img/mail.svg" alt="">
-                        </div>
-                    </div>
-                    <div class="user_password column-flex-start">
-                        <div class=" inputs login_input_password row-center">
-                            <input required type="password" id="" minlength="6" class="input_password"
-                                placeholder="Password">
-                            <img class="login_input_img" src="assets/img/locker.svg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="login_buttons row-center-flexstart">
-                    <button class="signup_button_cont row-center-center" onclick="confirmNewUser()">
-                        <a class="sign_button font400">Sign up</a>
-                    </button>
-                </div>
-            </div>
-        </div>
+        
         <!-- forgot Password window-->
         <div class="forgot_passw_container column-center d-none" id="container_forgot_password">
             <div class="blue_arrow" onclick="showLoginSite()">
