--- a/board.html
+++ b/board.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +13,10 @@
 
     <link rel="stylesheet" href="assets/css/miniPopups.css">
     <link rel="stylesheet" href="assets/css/models.css">
-    
+    <link rel="stylesheet" href="assets/css/board.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
+
     <script src="assets/js/header.js"></script>
     <script src="assets/js/script.js"></script>
     <div w3-include-html="assets/templates/header.html"></div>
@@ -20,6 +24,44 @@
 
 <body onload="init()">
     <div w3-include-html="assets/templates/menu.html"></div>
-    
+
+    <div class="board_container">
+        <div class="board_head row-center">
+            <div class="board_head_findTask row-flexstart">
+                <div class="board_head_findT row-center">
+                    <div class="find_task_head row-spacebet-center">
+                        <input class="find_task_input row-center-center font400" placeholder="Find Task">
+                        <div class="find_task_imgs row-center">
+                            <img src="assets/img/grauLine.svg">
+                            <img src="assets/img/lupe.svg" class="find_task_img">
+                        </div>
+                    </div>
+                </div>
+                <div class="addTask_button row-center-center">
+                    <a class="add_task_text font400">Add task</a>
+                    <img src="assets/img/plusAddTask.svg" class="plus_addTask">
+                </div>
+            </div>
+        </div>
+        <div class="board_columns row-flexstart">
+            <div class="board_column_tasks row-spacebet-center">
+                <a class="column_tasks_text font400">To do</a>
+                <img src="assets/img/plusbutton.svg" src="column_task_plus">
+            </div>
+            <div class="board_column_tasks row-spacebet-center">
+                <a class="column_tasks_text font400">In progress</a>
+                <img src="assets/img/plusbutton.svg" src="column_task_plus">
+            </div>
+            <div class="board_column_tasks row-spacebet-center">
+                <a class="column_tasks_text font400">Await feedback</a>
+                <img src="assets/img/plusbutton.svg" src="column_task_plus">
+            </div>
+            <div class="board_column_tasks row-spacebet-center">
+                <a class="column_tasks_text font400">Done</a>
+                <img src="assets/img/plusbutton.svg" src="column_task_plus">
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
