--- a/summary.html
+++ b/summary.html
@@ -14,10 +14,17 @@
     <link rel="stylesheet" href="assets/css/miniPopups.css">
     <link rel="stylesheet" href="assets/css/models.css">
     <link rel="stylesheet" href="assets/css/summary.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/header.css">
 
     <script src="assets/js/summary.js"></script>
     <script src="assets/js/header.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/mini_backend.js"></script>
+    <script>
+        setURL('https://juan-desantos.developerakademie.net/smallest_backend_ever');
+    </script>
+
     <div w3-include-html="assets/templates/header.html"></div>
 </head>
 
