save files html and css

--- a/addTask.html
+++ b/addTask.html
@@ -87,6 +87,16 @@
                 </div>
             </div>
         </div>
+        <div class="add_task_buttons_bottom row-center-center">
+            <button class="add_task_buttons_clear row-center-center">
+                <a class="add_task_clear_text font400">Clear</a>
+                <img src="assets/img/closePopCreate.svg" class="add_task_clear_img">
+            </button>
+            <button class="add_task_buttons_create row-center-center">
+                <a class="add_task_create_text font400">Create Task</a>
+                <img src="assets/img/checkCreateT.svg" class="">
+            </button>
+        </div>
     </div>
 </body>
 
