--- a/summary.html
+++ b/summary.html
@@ -20,6 +20,7 @@
     <script src="assets/js/summary.js"></script>
     <script src="assets/js/header.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/login-signup.js"></script>
     <script src="assets/js/mini_backend.js"></script>
     <script>
         setURL('https://juan-desantos.developerakademie.net/smallest_backend_ever');
@@ -28,13 +29,13 @@
     <div w3-include-html="assets/templates/header.html"></div>
 </head>
 
-<body onload="init()">
+<body onload="initSummary()">
     <div w3-include-html="assets/templates/menu.html"></div>
     <div class="summary_general_cont center-center">
         <div class="container_summary column-center">
             <div class="summary_head row-center ">
-                <a class="summary_morning font400">Good morning,</a>
-                <a class="summary_user font400">&nbspUser</a>
+                <a class="summary_morning font400" id="greetText"></a>
+                <a class="summary_user font400" id="summaryUser"></a>
             </div>
         </div>
         <div class="summary_board column-center-center">
@@ -43,7 +44,7 @@
                     <div class="summary_left_urgent column-center-center">
                         <div class="summary_urgent_up row-center-center">
                             <img src="assets/img/blueClock.svg" class="urgent_clock_img">
-                            <a class="urgent_number font400">1</a>
+                            <a class="urgent_number font400">0</a>
                         </div>
                         <a class="summary_urgent_text font400">Tasks Urgent</a>
                     </div>
@@ -66,7 +67,7 @@
                     <div class="summary_right_cont column-center-center">
                         <div class="summary_cont_task row-center">
                             <img src="assets/img/Board.svg" class="summary_task_img">
-                            <a class="summary_task_number font400">1</a>
+                            <a class="summary_task_number font400">0</a>
                         </div>
                         <a class="summary_cont_tasktodo">Tasks To-do</a>
                     </div>
@@ -77,7 +78,7 @@
                     <div class="summary_cont_tasks column-center-center">
                         <div class="summary_tasks_progress row-center">
                             <img src="assets/img/taskBoard.svg" class="summary_progess_img">
-                            <a class="summary_progress_number font400">1</a>
+                            <a class="summary_progress_number font400">0</a>
                         </div>
                         <a class="summary_tasks_text font400">Task in Board</a>
                     </div>
@@ -86,7 +87,7 @@
                     <div class="summary_cont_tasks column-center-center">
                         <div class="summary_tasks_progress row-center">
                             <img src="assets/img/taskProgress.svg" class="summary_progess_img">
-                            <a class="summary_progress_number font400">1</a>
+                            <a class="summary_progress_number font400">0</a>
                         </div>
                         <a class="summary_tasks_text font400">Task in Progress</a>
                     </div>
@@ -95,7 +96,7 @@
                     <div class="summary_cont_tasks column-center-center">
                         <div class="summary_tasks_progress row-center">
                             <img src="assets/img/taskFeedback.svg" class="summary_progess_img">
-                            <a class="summary_progress_number font400">1</a>
+                            <a class="summary_progress_number font400">0</a>
                         </div>
                         <a class="summary_tasks_text font400">Awaiting Feedback</a>
                     </div>
@@ -104,7 +105,7 @@
                     <div class="summary_cont_tasks column-center-center">
                         <div class="summary_tasks_progress row-center">
                             <img src="assets/img/taskDone.svg" class="summary_progess_img">
-                            <a class="summary_progress_number font400">1</a>
+                            <a class="summary_progress_number font400">0</a>
                         </div>
                         <a class="summary_tasks_text font400">Tasks Done</a>
                     </div>
